; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_atari_ps2.c_PLATFORM_Sleep.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_atari_ps2.c_PLATFORM_Sleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64, i64, i64 }

@UI_is_active = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PLATFORM_Sleep(double %0) #0 {
  %2 = alloca double, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 8
  store double %0, double* %2, align 8
  %6 = load i64, i64* @UI_is_active, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %35

8:                                                ; preds = %1
  store i32 0, i32* %3, align 4
  br label %9

9:                                                ; preds = %31, %8
  %10 = load i32, i32* %3, align 4
  %11 = sitofp i32 %10 to double
  %12 = load double, double* %2, align 8
  %13 = fmul double %12, 1.000000e+02
  %14 = fcmp olt double %11, %13
  br i1 %14, label %15, label %34

15:                                               ; preds = %9
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  store i64 0, i64* %16, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  store i64 0, i64* %17, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  store i64 0, i64* %18, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i32 1, i32* %19, align 8
  %20 = call i32 @CreateSema(%struct.TYPE_3__* %5)
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %4, align 4
  %22 = icmp sle i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %15
  br label %35

24:                                               ; preds = %15
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @iSignalSema(i32 %25)
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @WaitSema(i32 %27)
  %29 = load i32, i32* %4, align 4
  %30 = call i32 @DeleteSema(i32 %29)
  br label %31

31:                                               ; preds = %24
  %32 = load i32, i32* %3, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %3, align 4
  br label %9

34:                                               ; preds = %9
  br label %35

35:                                               ; preds = %23, %34, %1
  ret void
}

declare dso_local i32 @CreateSema(%struct.TYPE_3__*) #1

declare dso_local i32 @iSignalSema(i32) #1

declare dso_local i32 @WaitSema(i32) #1

declare dso_local i32 @DeleteSema(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
